--- a/css/style.css
+++ b/css/style.css
@@ -82,19 +82,37 @@ html {
         padding: 1rem 0;
         display: flex;
         justify-content: center;
-        gap: 2rem;
+        gap: 2rem; /** Separacion forma nueva **/
     }
     .navegacion__enlace {
         font-family: var(--fuentePrincipal);
         color: var(--blanco);
         font-size: 3rem;
     }
+    .navegacion__enlace:last-of-type {
+        margin-right: 0;
+    }
     .navegacion__enlace--activo,
     .navegacion__enlace:hover {
         color: var(--secundario);
     }
 
+    /** Productos **/
+    .producto {
 
+    }
+    .producto__imagen {
+
+    }
+    .producto__informacion {
+
+    }
+    .producto__nombre {
+
+    }
+    .producto__precio {
+        
+    }
 
 
 
