--- a/css/style.css
+++ b/css/style.css
@@ -129,11 +129,108 @@ html {
         line-height: 1.5rem;
     }
 
+    /** Graficos **/
+    .grafico {
+        min-height: 30rem;
+        background-repeat: no-repeat;
+        background-size: cover;
+        grid-column: 1 / 3 ;
+    }
+    .grafico--camisas {
+        grid-row: 2 / 3;
+        background-image: url(../img/grafico1.jpg);
+
+    }
+    .grafico--node {
+        background-image: url(../img/grafico2.jpg);
+        grid-row: 8 / 9;
+    }
+
+    /** Nosotros **/
+    .contenedor--nosotros {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .contenedor--nosotros__texto {
+        margin: 10px;
+    }
+    .contenedor--nosotros__imagen {
+        max-width: 100%;
+    }
+
+    /** Bloques **/
+    .bloques {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+    .bloque_imagen {
+        width: 100%;
+    }
+    .bloque {
+        text-align: center;
+    }
+    .bloque__titulo {
+        margin: 0;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     /** Media Queries **/
     @media (min-width: 768px) {
         .grid {
             grid-template-columns: repeat(3, 1fr);
         }
     }
+
+    @media (min-width: 768px) {
+        .grafico--node {
+            grid-row: 5 / 6;
+            grid-column: 2 / 4;
+        }
+    }
+
+    @media (min-width: 768px) {
+        .contenedor--nosotros {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        }
+    }
+    
+    @media (min-width: 768px) {
+        .bloques {
+            grid-template-columns: repeat(4, 1fr);
+        }
+    }
+
 
 
