--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html {
         text-decoration: none;
     }
     img {
-        max-width: 100%;
+        width: 100%;
     }
     .contenedor {
         max-width: 120rem;
@@ -108,9 +108,6 @@ html {
         background-color: var(--primarioOscuro);
         padding: 1rem;
     }
-    .producto__imagen {
-        width: 100%;
-    }
     .producto__informacion {
 
     }
@@ -156,9 +153,6 @@ html {
     .contenedor--nosotros__texto {
         margin: 10px;
     }
-    .contenedor--nosotros__imagen {
-        max-width: 100%;
-    }
 
     /** Bloques **/
     .bloques {
@@ -166,9 +160,7 @@ html {
         grid-template-columns: repeat(2, 1fr);
         gap: 2rem;
     }
-    .bloque_imagen {
-        width: 100%;
-    }
+    
     .bloque {
         text-align: center;
     }
@@ -176,6 +168,43 @@ html {
         margin: 0;
     }
 
+    /** Pagina del Producto **/
+
+    .camisa {
+
+    }
+    .formulario { 
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+
+    }
+    .formulario__campo {
+        border:1rem solid var(--primarioOscuro);
+        background-color: transparent;
+        color: var(--blanco);
+        font-size: 2rem;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 1rem; 
+        appearance: none;
+
+    }
+    option {
+        color: #000;
+    }
+    .formulario__submit {
+        background-color: var(--secundario);
+        border: none;
+        font-size: 2rem;
+        font-family: var(--fuentePrincipal);
+        padding: 2rem;
+        transition: background-color .3s ease;
+        grid-column: 1 / 3;
+    }
+    .formulario__submit:hover {
+        cursor: pointer;
+        background-color: var(--secundarioOscuro);
+    }
 
 
 
@@ -232,5 +261,11 @@ html {
         }
     }
 
+    @media (min-width: 768px) {
+        .camisa {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            column-gap: 2rem;
 
-
+        }
+    }
